--- a/app/src/main/res/layout/activity_admin_tools.xml
+++ b/app/src/main/res/layout/activity_admin_tools.xml
@@ -184,6 +184,23 @@
                 android:textAlignment="center"
                 />
 
+            <TextView
+                android:id="@+id/allmembersfinancial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/f6"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:fontFamily="@font/google_sans_light"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:padding="10dp"
+                android:background="@drawable/rounded"
+                android:textAlignment="center"
+                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
