--- a/app/src/main/res/layout/activity_app_account.xml
+++ b/app/src/main/res/layout/activity_app_account.xml
@@ -570,6 +570,31 @@
                         />
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/myFinancial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:cardCornerRadius="8dp"
+                app:cardBackgroundColor="@color/green"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/f15"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/google_sans_light"
+                    android:layout_margin="5dp"
+                    android:padding="8dp"
+                    android:textAlignment="center"
+                    />
+            </androidx.cardview.widget.CardView>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -633,17 +658,17 @@
                     android:layout_margin="5dp"
                     android:visibility="invisible"
                     >
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/a11"
-                            android:textColor="@color/white"
-                            android:textSize="16sp"
-                            android:fontFamily="@font/google_sans_light"
-                            android:layout_margin="5dp"
-                            android:padding="8dp"
-                            android:textAlignment="center"
-                            />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:fontFamily="@font/google_sans_light"
+                        android:padding="8dp"
+                        android:text="@string/a11"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
