--- a/app/src/main/res/layout/activity_edit_financials.xml
+++ b/app/src/main/res/layout/activity_edit_financials.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
+    tools:context=".AddFinancialDetails"
     android:orientation="vertical"
     android:background="@color/white"
-    android:id="@+id/layout"
     >
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/purple_700">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/imageBack"
                 android:layout_width="wrap_content"
@@ -27,6 +29,7 @@
                 app:tint="@color/white"
                 android:contentDescription="@string/app_name"
                 />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -38,7 +41,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/google_sans_regular"
-                    android:text="@string/l1"
+                    android:text="@string/f0"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:gravity="center"
@@ -56,6 +59,7 @@
                 />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -67,132 +71,161 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
-            <ImageView
-                android:id="@+id/imageHood"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:srcCompat="@drawable/bankss"
-                android:contentDescription="@string/app_name"
-                app:tint="@color/green"
-                android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="100dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name3"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="@font/google_sans_light"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="5dp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/rounded"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
-            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/google_sans_light"
-                android:text="@string/l2"
-                android:textColor="@color/white"
+                android:text="@string/r1"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:padding="10dp"
+                android:layout_marginStart="5dp"
+                />
+            <TextView
+                android:layout_width="325dp"
+                android:layout_height="2dp"
+                android:fontFamily="@font/google_sans_light"
+                android:textColor="@color/black"
                 android:layout_marginStart="10dp"
-                android:textStyle="bold"
+                android:layout_marginEnd="30dp"
+                android:background="@color/green"
+                />
+            <TextView
+                android:id="@+id/mname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/google_sans_light"
+                android:text="Juma Ali"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:padding="10dp"
+                android:layout_marginStart="5dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/google_sans_light"
+                android:text="@string/f1"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:padding="10dp"
+                android:layout_marginStart="5dp"
                 />
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/shares"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="@string/l2_1"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"
+                android:hint="@string/f1_0"
+                android:textColorHint="@color/green"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:padding="10dp"
-                android:background="@drawable/layout_g"
+                android:background="@drawable/layout_bg"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/google_sans_light"
-                android:text="@string/l3"
-                android:textColor="@color/white"
+                android:text="@string/f2"
+                android:textColor="@color/black"
                 android:textSize="18sp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:padding="10dp"
-                android:layout_marginStart="10dp"
-                android:textStyle="bold"
+                android:layout_marginStart="5dp"
                 />
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/lterm"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="@string/l3_1"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"
+                android:hint="@string/f2_0"
+                android:textColorHint="@color/green"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:inputType="textPassword"
+                android:inputType="number"
                 android:padding="10dp"
-                android:background="@drawable/layout_g"
-                android:layout_marginBottom="10dp"
+                android:background="@drawable/layout_bg"
                 />
             <TextView
-                android:id="@+id/login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name5"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:fontFamily="@font/google_sans_light"
-                android:layout_marginBottom="1dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginTop="10dp"
-                android:padding="10dp"
-                android:background="@drawable/round_white"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:id="@+id/reset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/google_sans_light"
-                android:text="@string/l4"
-                android:textColor="@color/white"
+                android:text="@string/f3"
+                android:textColor="@color/black"
                 android:textSize="18sp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:padding="10dp"
-                android:layout_marginStart="10dp"
-                android:textStyle="bold"
+                android:layout_marginStart="5dp"
                 />
-        </LinearLayout>
+            <EditText
+                android:id="@+id/eloan"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="@string/f3_0"
+                android:textColorHint="@color/green"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:inputType="number"
+                android:padding="10dp"
+                android:background="@drawable/layout_bg"
+                />
+
+            <TextView
+                android:id="@+id/next"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/f4"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="@font/google_sans_light"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="20dp"
+                android:padding="10dp"
+                android:background="@drawable/rounded"
+                android:textAlignment="center"
+                app:drawableRightCompat="@drawable/nexts"
+                />
+
+            <TextView
+                android:id="@+id/back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/a96"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="@font/google_sans_light"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:padding="10dp"
+                android:background="@drawable/rounded"
+                android:textAlignment="center"
+                />
+
             <ProgressBar
-                android:id="@+id/my_progressBarCars"
+                android:id="@+id/progressBar"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:indeterminate="true"
                 android:layout_marginBottom="10dp"
                 android:visibility="invisible"
