--- a/app/src/main/res/layout/activity_loan_payment.xml
+++ b/app/src/main/res/layout/activity_loan_payment.xml
@@ -150,6 +150,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/google_sans_light"
+                android:text="@string/f13"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:padding="10dp"
+                android:layout_marginStart="5dp"
+                />
+            <EditText
+                android:id="@+id/note"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="@string/f14"
+                android:textColorHint="@color/green"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:background="@drawable/layout_bg"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/google_sans_light"
                 android:text="@string/lp3"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -185,14 +211,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/google_sans_light"
-                android:text="@string/lp3"
+                android:text="@string/lp3_1"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:padding="10dp"
-                android:layout_marginStart="5dp"
-                android:visibility="invisible"
+                android:padding="2dp"
+                android:layout_marginStart="15dp"
                 />
 
             <TextView
@@ -203,14 +228,28 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:fontFamily="@font/google_sans_light"
-                android:layout_marginBottom="20dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_marginTop="30dp"
                 android:padding="10dp"
                 android:background="@drawable/rounded"
                 android:textAlignment="center"
                 app:drawableRightCompat="@drawable/nexts"
+                />
+            <TextView
+                android:id="@+id/back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/a96"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="@font/google_sans_light"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:background="@drawable/rounded"
+                android:textAlignment="center"
                 />
 
             <ProgressBar
